fix all hover scrollbars using scrollbar-gutter - closes #12899

--- a/ui/common/css/abstract/_mixins.scss
+++ b/ui/common/css/abstract/_mixins.scss
@@ -30,15 +30,11 @@
 }
 
 @mixin hoverflow {
+  scrollbar-gutter: stable;
   overflow-y: auto;
-
   @media (hover: hover) {
     &:not(:hover) {
-      scrollbar-width: none;
-
-      &::-webkit-scrollbar {
-        display: none;
-      }
+      overflow: hidden;
     }
   }
 }
